fixed offset bug and made task label clip when overflowing

--- a/todolist_server/task_display/static/css/base.css
+++ b/todolist_server/task_display/static/css/base.css
@@ -15,6 +15,11 @@ header, main, footer, .offset-content, .title {
 
 body {
     background-color: #202123;
+    overflow-x: hidden;
+}
+
+.offset-content {
+    overflow-x: hidden;
 }
 
 .divcenter {
@@ -25,6 +30,6 @@ input {
     color: #d2d2d2;
 }
 
-textarea{
+textarea {
     color: #d2d2d2;
 }
