--- a/todolist_server/task_display/static/css/eisenhower.css
+++ b/todolist_server/task_display/static/css/eisenhower.css
@@ -2,6 +2,7 @@
     color: #d2d2d2;
     padding: 0.5em 2em 0.5em 2em;
     height: 3em;
+    border-radius: 5px;
 }
 
 .eisenhower {
@@ -18,7 +19,6 @@
     height: 10em;
     background-color: transparent;
     padding: 2%;
-    border: 1px solid #9e9e9e;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -28,6 +28,7 @@
     position: absolute;
     left: 50%;
     bottom: 50%;
+    transform: translate(-50%, 50%);
     background-color: #d2d2d2;
     border-radius: 4px;
     padding: 3px;
@@ -37,12 +38,26 @@
     background-color: #304225;
 }
 
+.border-top-right {
+    border-left: 1px solid #9e9e9e;
+    border-bottom: 1px solid #9e9e9e;
+}
+
 .delegate {
     background-color: #215F5E;
 }
 
+.border-bottom-right {
+    border-left: 1px solid #9e9e9e;
+
+}
+
 .schedule {
     background-color: #7b7131;
+}
+
+.border-top-left {
+    border-bottom: 1px solid #9e9e9e;
 }
 
 .eliminate {
